Updated contents on faq section, fix zcash logo vertical spacing, updated meta tag

--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -87,6 +87,7 @@ h2 {
   display: flex;
   background-color: grayishBlackColor;
   justify-content: center;
+  align-items: center;
 }
 
 .countdownContainer {
